--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ nav ul li{
 }
 .price{
     background-color: #fff;
+    padding: 0;
+    margin-top: 15px;
 }
 .price small{
     color: orange;
@@ -54,7 +56,6 @@ nav ul li{
 }
 .casual-image{
     background-color: #F1F1F1;
-    ;
     border-radius: 15px;
     height: 350px;
 }
