--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
 h5{
     font-weight: 700;
     font-size: 1.2rem;
-    white-space:nowrap;
 
 }
 /* nav 
@@ -41,6 +40,10 @@ nav ul li{
 /* end home 
 -----------------*/
 /* casual shoes*/
+.my-card{
+    margin: 0 10px;
+    width: 30%;
+}
 .shoes-text{
     padding: 0;
     margin-top: 1.2rem;
@@ -52,12 +55,12 @@ nav ul li{
 }
 .price small{
     color: orange;
-    font-size: 30px;
+    font-size: 16px;
 }
 .casual-image{
     background-color: #F1F1F1;
     border-radius: 15px;
-    height: 350px;
+    /* height: 350px; */
 }
 
 .image-icon img{
